0.67
PENDIENTE DE RESOLVER, PERO NOTIFICADO
- BUG: En  solaris no debería haber asterix_versions. Sin
embargo, si no existe en el fichero de configuración, la
aplicación no arranca. Si existe, la aplicación funciona
(no se comprueba nada mas).
- SOPORTE: Ya se puede generar de un fichero GPS->GPS,
AST->AST y GPS->AST. Esto permite a los filtros trabajar
sobre ficheros ast y sobre ficheros gps.

0.66
- SOPORTE: Creación de filtro de blancos en tierra. Se usará
en reader_network con file como origen.
- BUG: Corregido el script de compilación (build.sh) para que
vuelva a funcionar en Solaris.

0.65
- SOPORTE: Added asterix_versions to allow runonce.
- SOPORTE: Now dest_ftp_uri is an array, so dest_file could be
uploaded several times to different hosts.
- BUG: If no dest_file_region is specified, don't insert text
in the destination filename.

0.64
- SOPORTE de datablocks en categoría 48. Antes solo se deco-
dificaba el primero. Ahora se procesan todos los datablocks
de un mismo paquete.
- CLEANUP de las librerías externas, ahora el paquete ocupa
la mitad porque no se distribuye tanta guarrería precompilada.

0.63
- BUG en client, client_time, etc. Faltaba por corregir el caso
en el que if (diff >=(86400-512)), porque podía ser que si el
grabador estaba con la hora atrasasda, los tiempos podían ser
negativos.

                        (tiempo plot)          (tiempo actual)
[MODEA 6764] [FL271] r8 [00:00:00.672] (0.672) [23:59:59.891] (86399.2188)


0.62
- BUG en reader_rrd y client_time, si las demoras son > 8segs se
produce un acceso fuera de memoria.

0.61
- CLEANUP Limpieza del código fuente, preparación para su 
publicación

0.6
- Añadido envio por ftp
- SOPORTE nuevo nombre al usar timestamp (yymmdd-region-hhmmss.ast)
- SOPORTE extensión del fichero editable

0.54
- Anadido reader_rrd para ejecutar directamente create/update_rrd
sin necesidad de usar un cliente.

0.53
- SOPORTE demoras tiempos cat 34 y 48

0.52