@@ -41,10 +41,12 @@ dest_localhost = false
 # output crcs to screen, mainly to debug purposes
 # dest_screen_crc = false
 
-# ensure asterix versions
-#asterix_versions = "8cbe827058a86db6d84c4132e8e111e5"
-asterix_versions = "485910c1fc16ed59afd8c84c02325d31"
-#asterix_versions = "56142869e7a5564756567664d369d001"
+# define precompiled asterix versions
+asterix_versions = { 
+    "8cbe827058a86db6d84c4132e8e111e5",
+    "56142869e7a5564756567664d369d001",
+    "485910c1fc16ed59afd8c84c02325d31"
+}
 
 # define multicast groups to be recorded
 # name (used only in stats), mcast group, mcast dest port, source ip address, interface ip address
